Fixed network overlap

--- a/src/interface/css/chat.scss
+++ b/src/interface/css/chat.scss
@@ -16,7 +16,7 @@
             height: 100%;
             width: 100%;
 
-            #message, #action {
+            #message, #action, #error {
                 color: #CECECE;
                 border-bottom: 1px solid #ffffff44;
 
@@ -45,9 +45,13 @@
                 background: #ffffff0c;
             }
 
-            #action {
+            #action, #error {
                 background: rgba(78, 255, 131, 0.185);
                 color: white;
+            }
+
+            #error {
+                background: rgba(245, 111, 111, 0.349);
             }
         }
 
